子用例增删

--- a/MyApp/templates/P_apis.html
+++ b/MyApp/templates/P_apis.html
@@ -430,7 +430,7 @@
                 var body_data = document.getElementById("raw_Text").value;
             }
             if (body_type === "JavaScript") {
-                var body_data = document.getElementById("raw_Javascript").value;
+                var body_data = document.getElementById("raw_JavaScript").value;
             }
             if (body_type === "Html") {
                 var body_data = document.getElementById("raw_Html").value;
@@ -498,7 +498,7 @@
                     var body_data = document.getElementById("raw_Text").value;
                 }
                 if (body_type === "JavaScript") {
-                    var body_data = document.getElementById("raw_Javascript").value;
+                    var body_data = document.getElementById("raw_JavaScript").value;
                 }
                 if (body_type === "Html") {
                     var body_data = document.getElementById("raw_Html").value;
