--- a/MyApp/templates/home.html
+++ b/MyApp/templates/home.html
@@ -49,7 +49,7 @@
         <div style="border: 1px solid black;border-radius: 10px 0px 0px 10px;text-align: center;background-color: #e3ffe3;opacity: 0.8;color: white;margin-left: 300px">
             <h3 style="color: #3e2935">最新消息：</h3>
             <span style="color: black">
-            帮助页面上线；<br>
+            <a href="/home2/">点击进入接口调试界面</a><br>
             后台开启，仅限有管理权限同学使用；<br>
             项目列表上线，您现在可以进入所有项目内了 <br>
                 </span>
