--- a/MyApp/templates/home2.html
+++ b/MyApp/templates/home2.html
@@ -161,6 +161,68 @@
         <br>
     </div>
     <script>
+        if ("{{ log.api_method }}" !== "") {
+            $("#ts_method").val("{{ log.api_method }}")
+        }
+        if ("{{ log.body_method }}" !== "") {
+            // body类型
+            $("#myTab li a[href='" + "#" + "{{ log.body_method }}" + "']").click();
+            // body
+            if ("{{ log.body_method }}"=== "form-data") {
+                // js替换的两种写法
+                // .replace(/&quot;/g,'"')
+                var body_str = "{{ log.api_body }}".replace(new RegExp("&quot;", "g"),'"')
+                console.log(body_str)
+                var body_object = JSON.parse(body_str)
+                var list = []
+                // 由于object类型的列表无法按照下标遍历，所以把数据插进object的列表（数组）
+                for (var i in body_object) {
+                    list.push([i, body_object[i]])
+                }
+                // 默认是有一个键值对，所以根据数据的长度，确定还需要加几个键值对
+                for (var c = 0; c < list.length - 1; c++) {
+                    $("#add").click()
+                }
+                for (var j = 0; j < list.length; j++) {
+                    $("#mytable tbody")[0].children[j].children[0].innerText = list[j][0];
+                    $("#mytable tbody")[0].children[j].children[1].innerText = list[j][1];
+                }
+            }
+            if ("{{ log.body_method }}" === "x-www-form-urlencoded") {
+                var body_str2 = "{{ log.api_body }}".replace(/&quot;/g, '"')
+                var body_object2 = JSON.parse(body_str2)
+                var list2 = []
+                // 由于object类型的列表无法按照下标遍历，所以把数据插进object的列表（数组）
+                for (var i2 in body_object2) {
+                    list2.push([i2, body_object2[i2]])
+                }
+                // 默认是有一个键值对，所以根据数据的长度，确定还需要加几个键值对
+                for (var c2 = 0; c2 < list2.length - 1; c2++) {
+                    $("#add2").click()
+                }
+                for (var j2 = 0; j2 < list2.length; j2++) {
+                    $("#mytable2 tbody")[0].children[j2].children[0].innerText = list2[j2][0];
+                    $("#mytable2 tbody")[0].children[j2].children[1].innerText = list2[j2][1];
+                }
+            }
+            if ("{{ log.body_method }}" === "Text") {
+                $("#raw_Text").val("{{ log.api_body }}")
+            }
+            if ("{{ log.body_method }}" === "JavaScript") {
+                $("#raw_JavaScript").val("{{ log.api_body }}")
+            }
+            if ("{{ log.body_method }}" === "Html") {
+                $("#raw_Html").val("{{ log.api_body }}")
+            }
+            if ("{{ log.body_method }}" === "Json") {
+                $("#raw_Json").val("{{ log.api_body }}")
+            }
+            if ("{{ log.body_method }}" === "Xml") {
+                $("#raw_Xml").val("{{ log.api_body }}")
+            }
+        }
+    </script>
+    <script>
         // 获得浏览器高度
         var height = document.documentElement.clientHeight;
         document.getElementById("shu").style.height =(height - 85).toString()+ "px"
@@ -193,7 +255,7 @@
                     var body_data = document.getElementById("raw_Text").value;
                 }
                 if (body_type === "JavaScript") {
-                    var body_data = document.getElementById("raw_Javascript").value;
+                    var body_data = document.getElementById("raw_JavaScript").value;
                 }
                 if (body_type === "Html") {
                     var body_data = document.getElementById("raw_Html").value;
