--- a/MyApp/templates/welcome.html
+++ b/MyApp/templates/welcome.html
@@ -9,9 +9,31 @@
     <link type="text/css" rel="stylesheet" href="/static/201908059658/src/jquery-rvnm.css" />
     <!--导入bootstrap-->
     <link rel="stylesheet" href="/static/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/css/bootstrap.css"/>
+    <script src="/static/201908059658/js/jquery-1.11.0.min.js" type="text/javascript"></script>
 </head>
 <body>
-    <nav id="navbar" class="">
+    <nav id="navbar" class="" style="z-index: 3">
+        <div style="color: white;margin-left: 5px;text-align: center">
+            <span style="font-size: large">欢迎你:  {{ username }}</span>
+            <br>
+            <img src="/static/user_img/{{ userimg }}" class="img-circle img-thumbnail" style="width: 50%">
+            <a id="pencil" class="glyphicon glyphicon-pencil"></a>
+        </div>
+        <form id="upload_file" action="/user_upload/" method="post" style="display: none;" enctype="multipart/form-data">
+            <input type="file" name="fileUpload" style="margin-left: 45px;width: 65px;height: 20px;font-size: x-small;float: left">
+            <button id="uoload_button" style="font-size: x-small;height: 20px">上传头像</button>
+        </form>
+        <script>
+            $("#pencil").click(
+                function () {
+                    if ($("#upload_file").css("display") === "block") {
+                        $("#upload_file").css("display", "none");
+                    } else {
+                        $("#upload_file").css("display", "block");
+                    }
+                }
+            );
+        </script>
         <ul>
             <li>
                 <a href="/project_list/">
@@ -308,7 +330,7 @@
             </button>
         </a>
     </div>
-    <script src="/static/201908059658/js/jquery-1.11.0.min.js" type="text/javascript"></script>
+
     <script type="text/javascript" src="/static/bootstrap-3.3.7-dist/bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <!--include plugin js-->
     <script type="text/javascript" src="/static/201908059658/src/jquery-rvnm.js"></script>
